--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -114,14 +114,19 @@ jobs:
           echo "DRY RUN: ${{ env.DRY_RUN }}"
           yarn lerna publish --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
 
-  deploy-staging:
-    needs: release
-    # Trigger staging storybook enviroment deployment workflow
-    if:  ${{ github.event.inputs.dry-run == 'false' }}
-    uses: ./.github/workflows/deploy-staging.yml
+      # After successfully publishing a release candidate, trigger the staging storybook environment deployment workflow.
+      # Pass in the release branch name to the storybook deployment job so it build off the release branch
+      - name: Dispatch staging storybook deployment workflow
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          event-type: deploy-staging-storybook
+          client-payload: '{"branch": "${{ github.ref_name }}"}'
 
-  deploy-latest:
-    needs: release
-    # If full release has been published, trigger the production storybook environment deployment workflow.
-    if: ${{ (github.event.inputs.dry-run == 'false') && ((github.event.inputs.type  == 'full minor release') || (github.event.inputs.type  == 'full patch release')) }}
-    uses: ./.github/workflows/deploy-latest.yml
+      # After successfully publishing a full release, trigger the production storybook environment deployment workflow.
+      # Pass in the release branch name to the storybook deployment job so it build off the release branch
+      - name: Dispatch production storybook deployment workflow
+        if: ${{ (github.event.inputs.type  == 'full minor release') || (github.event.inputs.type  == 'full patch release') }}
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          event-type: deploy-latest-storybook
+          client-payload: '{"branch": "${{ github.ref_name }}"}'
