--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,12 +1,12 @@
 # Deploy staging storybook environment from release branch to Github Pages
 name: Deploy staging storybook
 
-# Gets triggered every time a change is pushed to the `release/v2*` branch or can be manually triggered
+# Gets triggered every time a release candidate has been published from the `release-base` workflow
+# or can be manually triggered
 on:
   workflow_dispatch:
-  workflow_call:
-  push:
-    branches: [release/v2*]
+  repository_dispatch:
+    types: [deploy-staging-storybook]
 
 jobs:
   deploy-staging-storybook:
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
         with:
           fetch-depth: '0'
+          ref: ${{ github.event.client_payload.branch }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
