--- a/.github/workflows/process_pr_review_data.yml
+++ b/.github/workflows/process_pr_review_data.yml
@@ -1,9 +1,8 @@
 name: Process saved PR data and apply appropriate labels
 
-# We have access to repo secrets from here
-# If the `Received PR review` workflow has complete
-# we'll run the custom action to add the
-# appropriate review labels
+# We have access to repo secrets from here. If the `Received PR review` workflow has completed
+# it means there has been a workflow artifact created with the data we need to apply the appropriate 
+# review labels from the custom action used from this workflow
 on:
   workflow_run:
     workflows: ['Received PR review']
