--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ package-lock.json
 # Playwright
 .playwright/
 /packages/ibm-products/.playwright/
+
+# Actions
+/actions/**/node_modules
+/actions/**/yarn.lock
