--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,8 +1,12 @@
 name: automerge
 
+# This workflow is triggered when any changes are pushed to the release branch and
+# when a release candidate or full release has been published in the `release-base` workflow
 on:
+  repository_dispatch:
+    types: [merge-to-main]
   push:
-    branches: [release/*]
+    branches: [release/v2*]
 
 concurrency:
   group: automerge-${{ github.ref }}
@@ -14,6 +18,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+          ref: ${{ github.event.client_payload.branch }}
       - name: Merge to main
         uses: devmasx/merge-branch@1.4.0
         with:
