--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,8 +57,8 @@
     "@storybook/theming": "^6.5.16",
     "babel-loader": "^9.1.2",
     "babel-preset-ibm-cloud-cognitive": "^0.14.28",
-    "carbon-components": "^10.58.13",
-    "carbon-components-react": "^7.59.20",
+    "carbon-components": "10.58.15",
+    "carbon-components-react": "7.59.24",
     "carbon-icons": "^7.0.7",
     "css-loader": "^6.7.3",
     "fast-sass-loader": "^2.0.1",
