--- a/packages/cdai/.storybook/.babelrc
+++ b/packages/cdai/.storybook/.babelrc
@@ -26,6 +26,7 @@
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-logical-assignment-operators",
     "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-proposal-nullish-coalescing-operator"
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-transform-runtime"
   ]
 }
