--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -95,8 +95,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.9",
-    "@carbon/feature-flags": "^0.20.0",
-    "@carbon/ibm-products-styles": "^2.42.0-rc.0",
+    "@carbon/feature-flags": "^0.21.0",
+    "@carbon/ibm-products-styles": "^2.42.0",
     "@carbon/telemetry": "^0.1.0",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^7.0.0",
@@ -111,12 +111,12 @@
     "react-window": "^1.8.10"
   },
   "peerDependencies": {
-    "@carbon/grid": "^11.22.0",
-    "@carbon/layout": "^11.21.0",
-    "@carbon/motion": "^11.17.0",
-    "@carbon/react": "^1.60.3",
-    "@carbon/themes": "^11.37.1",
-    "@carbon/type": "^11.26.0",
+    "@carbon/grid": "^11.25.0",
+    "@carbon/layout": "^11.24.0",
+    "@carbon/motion": "^11.20.0",
+    "@carbon/react": "^1.63.0",
+    "@carbon/themes": "^11.38.0",
+    "@carbon/type": "^11.29.0",
     "react": "^16.8.6 || ^17.0.1 || ^18.2.0",
     "react-dom": "^16.8.6 || ^17.0.1 || ^18.2.0"
   }
