--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -56,54 +56,54 @@
     "upgrade-dependencies": "npm-check-updates -u --dep dev,peer,prod --color --reject '/(carbon|^react$|^react-dom$|^chalk$|^namor)/'"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.23.9",
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-proposal-export-default-from": "^7.17.12",
+    "@babel/plugin-proposal-export-default-from": "^7.24.7",
     "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
-    "@babel/plugin-transform-react-constant-elements": "^7.17.12",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.21.5",
-    "@ibm/telemetry-js-config-generator": "^1.0.3",
-    "@rollup/plugin-babel": "^6.0.0",
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-typescript": "^11.0.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.25.1",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@ibm/telemetry-js-config-generator": "^2.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react-table": "^7.7.20",
     "babel-plugin-dev-expression": "^0.2.3",
     "babel-preset-ibm-cloud-cognitive": "^0.14.40",
     "chalk": "^4.1.2",
-    "change-case": "4.1.2",
+    "change-case": "5.4.4",
     "classnames": "^2.5.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "fs-extra": "^11.2.0",
-    "glob": "^10.3.10",
+    "glob": "^11.0.0",
     "jest": "^29.7.0",
     "jest-config-ibm-cloud-cognitive": "^1.5.0-rc.0",
     "jest-environment-jsdom": "^29.7.0",
     "namor": "^1.1.2",
-    "npm-check-updates": "^16.14.12",
+    "npm-check-updates": "^17.0.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.5",
-    "rollup": "^2.79.1",
-    "rollup-plugin-strip-banner": "^3.0.0",
-    "sass": "^1.77.2",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.19.1",
+    "rollup-plugin-strip-banner": "^3.1.0",
+    "sass": "^1.77.8",
     "typescript-config-carbon": "^0.2.1",
     "yargs": "^17.7.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.9",
+    "@babel/runtime": "^7.25.0",
     "@carbon/feature-flags": "^0.20.0",
     "@carbon/ibm-products-styles": "^2.42.0-rc.0",
     "@carbon/telemetry": "^0.1.0",
-    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@ibm/telemetry-js": "^1.5.0",
-    "framer-motion": "^6.5.1 < 7",
+    "@ibm/telemetry-js": "^1.6.0",
+    "framer-motion": "^11",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
