--- a/.percy.yml
+++ b/.percy.yml
@@ -5,3 +5,18 @@ snapshot:
     - 360
     - 1366
   minHeight: 1024
+storybook:
+  include: ['/IBM Products/']
+  # Exclude the following stories until randomized data is removed
+  exclude:
+    [
+      '/Datagrid/ClickableRow/',
+      '/Datagrid/ColumnCustomization/',
+      '/Datagrid/EditableCell/',
+      '/Datagrid/ExpandableRow/',
+      '/Datagrid/NestedRows/',
+      '/Datagrid/RowHeightSettings/',
+      '/Datagrid/Slug/',
+      '/DataSpreadsheet/',
+      '/Tag set/TagSet: Hundreds Of Tags/',
+    ]
