--- a/package.json
+++ b/package.json
@@ -136,8 +136,34 @@
       "react/display-name": [
         0
       ],
-      "react/forbid-component-props": 0,
-      "react/forbid-dom-props": 0
+      "react/forbid-component-props": [
+        2,
+        {
+          "forbid": [
+            {
+              "propName": "style",
+              "disallowedFor": [
+                "Datagrid"
+              ],
+              "message": "Avoid using style prop"
+            }
+          ]
+        }
+      ],
+      "react/forbid-dom-props": [
+        2,
+        {
+          "forbid": [
+            {
+              "propName": "style",
+              "disallowedFor": [
+                "Datagrid"
+              ],
+              "message": "Avoid using style prop"
+            }
+          ]
+        }
+      ]
     },
     "overrides": [
       {
