--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,13 +1,13 @@
 name: Stale # close stale issues
 on:
   schedule:
-    - cron: '30 7 * * 4' # runs 7:30 on Thursdays
+    - cron: '0 8 * * *' # Runs at 8:00 every day
 
 jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/stale@v8
+      - uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e #v9.0.0
         with:
           any-of-labels:
             'status: needs reproduction,status: waiting for author 💬'
@@ -18,6 +18,6 @@ jobs:
             This issue was closed because it has received no activity for 14 days.
           stale-issue-label: 'stale 🍞'
           close-issue-label: 'status: won’t fix 🔚'
-          days-before-stale: 30
-          days-before-close: 14
+          days-before-stale: 7
+          days-before-close: 7
           days-before-pr-close: -1
