--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -47,7 +47,7 @@ jobs:
         id: create-pr
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CREATE_PR_ACCESS_TOKEN }}
           commit-message: 'chore: update example gallery'
           committer: GitHub <noreply@github.com>
           author:
