--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -42,16 +42,16 @@ jobs:
             exit 0
           fi
 
-      # - name: Commit the changes
-      #   if: failure() && steps.up_to_date.outcome == 'failure'
-      #   id: commit
-      #   working-directory: ./
-      #   run: |
-      #     git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
-      #     git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
-      #     git add .
-      #     git commit -m "chore: update example gallery"
-      #     git push origin
+      - name: Commit the changes
+        if: failure() && steps.up_to_date.outcome == 'failure'
+        id: commit
+        working-directory: ./
+        run: |
+          git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
+          git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
+          git add .
+          git commit -m "chore: update example gallery"
+          git push origin
 
 
       - name: Create pull request
