--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -47,6 +47,7 @@ jobs:
         id: commit
         working-directory: ./
         run: |
+          git checkout -b update-examples
           git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
           git add .
