--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -52,7 +52,7 @@ jobs:
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
           git add .
           git commit -m "chore: update example gallery"
-          git push
+          git push --set-upstream origin update-examples
 
       - name: Create pull request
         if: steps.up_to_date.outcome == 'failure'
