--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -42,8 +42,9 @@ jobs:
             exit 0
           fi
 
-      - name: Commit and push
+      - name: Commit the changes
         if: failure() && steps.up_to_date.outcome == 'failure'
+        id: commit_chagnes
         run: |
           git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
