--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -49,7 +49,7 @@ jobs:
           git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
           git add .
-          git commit -m "chore: update example gallery"
+          git commit -m "chore: this is the commit"
 
       - name: Create pull request
         if: failure() && steps.up_to_date.outcome == 'failure'
