--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "plugins": [
       "ssr-friendly"
     ],
+    "ignorePatterns": ["packages/ibm-products-web-components/**/*"],
     "extends": [
       "carbon",
       "plugin:ssr-friendly/recommended"
