--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.30.1",
     "@carbon/styles": "1.63.1",
-    "@carbon/web-components": "2.13.0"
+    "@carbon/web-components": "2.13.0",
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@carbon/icons": "^11.50.0",
