--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -11,7 +11,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "yarn clean && node tasks/build.js",
+    "build:storybook": "storybook build",
+    "clean": "rimraf es lib scss dist storybook-static",
     "preview": "vite preview",
     "storybook": "storybook dev -p 3000"
   },
@@ -24,6 +26,10 @@
   "devDependencies": {
     "@carbon/icons": "^11.50.0",
     "@carbon/motion": "^11.23.0",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@storybook/addon-essentials": "^8.2.8",
     "@storybook/addon-links": "^8.2.8",
     "@storybook/addon-storysource": "^8.2.8",
@@ -32,9 +38,16 @@
     "@storybook/theming": "^8.3.4",
     "@storybook/web-components": "^8.2.8",
     "@storybook/web-components-vite": "^8.2.8",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "eslint": "^9.11.1",
     "eslint-config-carbon": "^3.17.0",
+    "globby": "^14.0.2",
+    "postcss": "^8.4.47",
     "remark-gfm": "^4.0.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.23.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "sass": "^1.51.0",
