--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ci-check:test:c4p": "yarn test:c4p --ci",
     "ci-check:test:c4p:snapshot": "yarn test:c4p:snapshot --ci",
     "ci-check:test:community": "yarn test:community --ci",
+    "ci-check:test:c4p-wc": "yarn test:c4p-wc --ci",
     "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
     "clean:cache": "yarn cache clean",
@@ -50,6 +51,7 @@
     "test:c4p:snapshot": "yarn test:c4p-styles styles -u",
     "test:c4p-styles": "lerna run --stream --scope @carbon/ibm-products-styles test --",
     "test:community": "lerna run --stream --scope @carbon/ibm-products-community test --",
+    "test:c4p-wc": "lerna run --stream --scope @carbon/ibm-products-web-components test --",
     "spellcheck": "cspell '**' -e './examples' --gitignore --quiet --no-must-find-files",
     "storybook": "yarn storybook:start",
     "storybook:build": "run-s -s 'storybook:build:*'",
