--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -15,7 +15,9 @@
     "build:storybook": "storybook build",
     "clean": "rimraf es lib scss dist storybook-static",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 3000"
+    "storybook": "storybook dev -p 3000",
+    "test": "vitest run",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.30.1",
@@ -39,11 +41,16 @@
     "@storybook/theming": "^8.3.4",
     "@storybook/web-components": "^8.2.8",
     "@storybook/web-components-vite": "^8.2.8",
+    "@types/jest": "^29.5.13",
+    "@vitest/browser": "latest",
+    "@vitest/ui": "latest",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "eslint": "^9.11.1",
     "eslint-config-carbon": "^3.17.0",
     "globby": "^14.0.2",
+    "happy-dom": "^15.7.4",
+    "jsdom": "latest",
     "postcss": "^8.4.47",
     "remark-gfm": "^4.0.0",
     "rimraf": "^6.0.1",
@@ -53,6 +60,7 @@
     "storybook": "^8.2.8",
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "latest"
   }
 }
