fix: add module type back

--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -5,6 +5,7 @@
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
+  "type": "module",
   "bugs": "https://github.com/carbon-design-system/ibm-products/issues",
   "repository": {
     "type": "git",
