--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -3,7 +3,7 @@
   "description": "Carbon for IBM Products Web Components",
   "version": "0.0.0",
   "license": "Apache-2.0",
-  "main": "lib/index.js",
+  "main": "es/index.js",
   "module": "es/index.js",
   "type": "module",
   "bugs": "https://github.com/carbon-design-system/ibm-products/issues",
