--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,12 +110,31 @@ jobs:
         with:
           path: '**/node_modules'
           key:
-            test-community-modules-${{ runner.os }}-${{ hashFiles('yarn.lock')
-            }}
+            test-community-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
       - name: Install
         run: yarn
       - name: CI tests for community
         run: yarn ci-check:test:community
+  test-c4p-wc:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+          cache: yarn
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key:
+            test-c4p-wc-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+      - name: Install
+        run: yarn
+      - name: CI tests for community
+        run: yarn ci-check:test:c4p-wc
 
   avt-runner:
     strategy:
