--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ci-check:test:c4p": "yarn test:c4p --ci",
     "ci-check:test:c4p:snapshot": "yarn test:c4p:snapshot --ci",
     "ci-check:test:community": "yarn test:community --ci",
-    "ci-check:test:c4p-wc": "yarn test:c4p-wc --ci",
+    "ci-check:test:c4p-wc": "yarn test:c4p-wc",
     "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
     "clean:cache": "yarn cache clean",
