--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,8 @@ jobs:
             test-c4p-wc-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
       - name: Install
         run: yarn
+      - name: Install browsers
+        run: yarn playwright install --with-deps
       - name: CI tests for community
         run: yarn ci-check:test:c4p-wc
 
