chore: update naming of wc ci step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
         run: yarn
       - name: Install browsers
         run: yarn playwright install --with-deps
-      - name: CI tests for community
+      - name: CI tests for products web components
         run: yarn ci-check:test:c4p-wc
 
   avt-runner:
