--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -16,6 +16,20 @@
     "access": "public",
     "provenance": true
   },
+  "exports": {
+    "./es/components/*": {
+      "node": "./lib/components/*",
+      "default": "./es/components/*"
+    },
+    "./es/globals/*": {
+      "node": "./lib/globals/*",
+      "default": "./es/globals/*"
+    },
+    "./es/*": "./es/*",
+    "./lib/*": "./lib/*",
+    "./custom-elements.json": "./custom-elements.json",
+    "./package.json": "./package.json"
+  },
   "keywords": [
     "carbon",
     "carbon design system",
@@ -26,13 +40,14 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "yarn clean && node tasks/build.js",
+    "build": "yarn clean && node tasks/build.js && yarn wca",
     "build:storybook": "storybook build",
     "clean": "rimraf es lib scss dist storybook-static",
     "preview": "vite preview",
     "storybook": "storybook dev -p 3000",
     "test": "vitest run",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "wca": "web-component-analyzer analyze src --outFile custom-elements.json"
   },
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.30.1",
@@ -68,14 +83,15 @@
     "jsdom": "latest",
     "postcss": "^8.4.47",
     "remark-gfm": "^4.0.0",
-    "rimraf": "^6.0.1",
-    "rollup": "^4.23.0",
+    "rimraf": "^5.0.5",
+    "rollup": "^3.29.5",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.51.0",
     "storybook": "^8.2.8",
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
-    "vitest": "latest"
+    "vitest": "^2.1.2",
+    "web-component-analyzer": "2.0.0"
   }
 }
