--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -50,7 +50,7 @@
     "wca": "web-component-analyzer analyze src --outFile custom-elements.json"
   },
   "dependencies": {
-    "@carbon/ibm-products-styles": "^2.30.1",
+    "@carbon/ibm-products-styles": "^2.47.0-rc.0",
     "@carbon/styles": "1.63.1",
     "@carbon/web-components": "2.13.0",
     "lit": "^3.1.0"
@@ -80,13 +80,12 @@
     "eslint-config-carbon": "^3.17.0",
     "globby": "^14.0.2",
     "happy-dom": "^15.7.4",
-    "jsdom": "latest",
     "postcss": "^8.4.47",
     "remark-gfm": "^4.0.0",
     "rimraf": "^5.0.5",
     "rollup": "^3.29.5",
     "rollup-plugin-copy": "^3.5.0",
-    "sass": "^1.51.0",
+    "sass": "^1.77.2",
     "storybook": "^8.2.8",
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
     "typescript": "^5.5.3",
