feat(`ibm-products-web-components`): setup new web component package and storybook (#6148)
* feat: initial setup for web components with new storybook

* chore: add typings and udpate tsconfig

* fix: use require rather than import to fix svg loader

* chore: format

* chore: add lit as dependency

* chore: consolidate sb themes

* chore: add build scripts

* fix: add @carbon name space to package name

* chore: update lock file

* chore: switch style loader

* fix: use ?lit to fix style loading

* chore: spellcheck issues

* chore: update cspell

* feat: add test setup with vitest

* fix: side panel test

* chore: add license

* chore: toolbar story avt update

* fix: address avt issues

* chore: update wc package.json

* fix: add module type back

* chore: change main entry point

* chore: add c4p wc tests to ci

* fix: remove --ci flag, vitest detects this automatically

* fix: install playwright browsers for vitest ci

* chore: update naming of wc ci step

* chore: review changes

* chore: match deps and add exclude config for vitest

* chore: remove storyStoreV7, enabled by default in v8

* fix: remove import of colors from styles package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,12 +110,33 @@ jobs:
         with:
           path: '**/node_modules'
           key:
-            test-community-modules-${{ runner.os }}-${{ hashFiles('yarn.lock')
-            }}
+            test-community-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
       - name: Install
         run: yarn
       - name: CI tests for community
         run: yarn ci-check:test:community
+  test-c4p-wc:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+          cache: yarn
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key:
+            test-c4p-wc-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+      - name: Install
+        run: yarn
+      - name: Install browsers
+        run: yarn playwright install --with-deps
+      - name: CI tests for products web components
+        run: yarn ci-check:test:c4p-wc
 
   avt-runner:
     strategy:
