chore: add wc storybook scripts to root package.json for netlify setup (#6193)
* chore: add wc storybook scripts to root package.json for netlify setup

* chore: update storybook build script for web comp

* chore: add second netlify toml file in wc package

* chore: remove ignore script for now

--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -39,9 +39,8 @@
     "web components"
   ],
   "scripts": {
-    "dev": "vite",
     "build": "yarn clean && node tasks/build.js && yarn wca",
-    "build:storybook": "storybook build",
+    "build:storybook": "yarn wca && storybook build",
     "clean": "rimraf es lib scss dist storybook-static",
     "preview": "vite preview",
     "storybook": "storybook dev -p 3000",
