--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -49,7 +49,7 @@
     "wca": "web-component-analyzer analyze src --outFile custom-elements.json"
   },
   "dependencies": {
-    "@carbon/ibm-products-styles": "^2.47.0-rc.0",
+    "@carbon/ibm-products-styles": "^2.47.0",
     "@carbon/styles": "1.63.1",
     "@carbon/web-components": "2.13.0",
     "lit": "^3.1.0"
