--- a/packages/core/netlify.toml
+++ b/packages/core/netlify.toml
@@ -1,6 +1,6 @@
 # Netlify build and deploy settings - https://docs.netlify.com/configure-builds/file-based-configuration/#sample-file
 [build]
-ignore = "sh ../../scripts/ignore_dependabot.sh"
+ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF packages/core packages/ibm-products"
 command = "yarn build"
 publish = "storybook-static"
 
