--- a/config/storybook-addon-carbon-theme/telemetry.yml
+++ b/config/storybook-addon-carbon-theme/telemetry.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://unpkg.com/@ibm/telemetry-config-schema@v1/dist/config.schema.json
 version: 1
 projectId: '55e814ff-85db-406f-9e37-2d0c92a753b0'
-endpoint: 'https://collector-prod.1am6wm210aow.us-south.codeengine.appdomain.cloud/v1/metrics'
+endpoint: 'https://www-api.ibm.com/ibm-telemetry/v1/metrics'
 collect:
   npm:
     dependencies: null
