--- a/packages/cdai/telemetry.yml
+++ b/packages/cdai/telemetry.yml
@@ -2,7 +2,7 @@
 
 version: 1
 projectId: 3fd2b152-b3b0-4651-90b2-246d49c6307d
-endpoint: https://collector-prod.1am6wm210aow.us-south.codeengine.appdomain.cloud/v1/metrics
+endpoint: https://www-api.ibm.com/ibm-telemetry/v1/telemetry
 collect:
   jsx:
     elements:
