--- a/packages/security/telemetry.yml
+++ b/packages/security/telemetry.yml
@@ -2,7 +2,7 @@
 
 version: 1
 projectId: cf5d7614-1602-40ba-baac-1f813cf09915
-endpoint: https://collector-prod.1am6wm210aow.us-south.codeengine.appdomain.cloud/v1/metrics
+endpoint: https://www-api.ibm.com/ibm-telemetry/v1/telemetry
 collect:
   jsx:
     elements:
