fix(onboardingComponents): csp voilation

--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid"
+                "Datagrid","Carousel","Checklist","Coachmark"
               ],
               "message": "Avoid using style prop"
             }
@@ -165,7 +165,7 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid"
+                "Datagrid","Carousel","Checklist","Coachmark"
               ],
               "message": "Avoid using style prop"
             }
