chore: test sb config changes

--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -67,6 +67,7 @@
     "@storybook/addon-storysource": "^8.2.8",
     "@storybook/blocks": "^8.2.8",
     "@storybook/manager-api": "^8.3.4",
+    "@storybook/theming": "^8.3.4",
     "@storybook/web-components": "^8.2.8",
     "@storybook/web-components-vite": "^8.2.8",
     "@types/jest": "^29.5.13",
