chore: adds violated components to forbid config

--- a/package.json
+++ b/package.json
@@ -149,7 +149,11 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid"
+                "Datagrid",
+                "DataSpreadsheet",
+                "NotificationsPanel",
+                "PageHeader",
+                "TearsheetSheel"
               ],
               "message": "Avoid using style prop"
             }
