fix(onboardingComponents): csp voilation (#6228)
* fix(onboardingComponents): csp voilation

* fix(CoachmarkOverlay): refactored styledTune

* fix(Coachmark): path fixed

* fix(Coachmark): added ref

* fix(Coachmark): removed useMemo

---------

Co-authored-by: Nandan Devadula <47176249+devadula-nandan@users.noreply.github.com>
Co-authored-by: elysia <elysia.hwang@gmail.com>

--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid"
+                "Datagrid","Carousel","Checklist","Coachmark"
               ],
               "message": "Avoid using style prop"
             }
@@ -162,7 +162,7 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid"
+                "Datagrid","Carousel","Checklist","Coachmark"
               ],
               "message": "Avoid using style prop"
             }
