fix: package.json error

--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
                 "DataSpreadsheet",
                 "NotificationsPanel",
                 "PageHeader",
-                "TearsheetSheet"
+                "TearsheetSheet",
                 "Carousel",
                 "Checklist",
                 "Coachmark"
