fix: resolve ibm products styles package

--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "cheerio": "1.0.0-rc.10",
     "braces": "^3.0.3",
     "micromatch": "4.0.8",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "@carbon/ibm-products-styles": "^2.47.0"
   },
   "eslintConfig": {
     "parser": "@babel/eslint-parser",
